@@ -25,7 +25,7 @@ if ( !defined( 'MEDIAWIKI' ) ) {
 	die( 'Not an entry point.' );
 }
 
-define( 'Push_VERSION', '1.0' );
+define( 'Push_VERSION', '1.1 alpha' );
 
 $wgExtensionCredits['other'][] = array(
 	'path' => __FILE__,
